@@ -4,6 +4,7 @@ ISODE_DEFS
 ISODE_INCLUDE
 CONFIG_RULES
 AC_SET_BUILDTOP
+AC_PROG_INSTALL
 AC_HAVE_LIBRARY(socket)
 AC_HAVE_LIBRARY(nsl)
 AC_FUNC_CHECK(utimes,AC_DEFINE(HAS_UTIMES))
