@@ -2,6 +2,7 @@ AC_INIT(sserver.c)
 WITH_CCOPTS
 CONFIG_RULES
 AC_SET_BUILDTOP
+AC_PROG_INSTALL
 AC_HAVE_LIBRARY(socket)
 AC_HAVE_LIBRARY(nsl)
 KRB_INCLUDE
